--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -201,8 +201,8 @@
                                                         <constraint firstAttribute="height" constant="35" id="1xs-rA-KfZ"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8l-ur-sZA">
-                                                    <rect key="frame" x="145" y="184" width="28" height="19"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8l-ur-sZA">
+                                                    <rect key="frame" x="148" y="186" width="25" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <state key="normal" title="0" image="dynamic_ic_fav_white"/>
@@ -283,8 +283,68 @@
                     <view key="view" contentMode="scaleToFill" id="zcc-6C-6nz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="eSR-dd-H2m">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rYC-5s-S2S" customClass="ZXSquareFlowLayout">
+                                    <size key="itemSize" width="180" height="180"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="fym-H7-XgJ" customClass="ZXBaseCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jXk-4y-4KG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cX-M4-2bu">
+                                                    <rect key="frame" x="0.0" y="76" width="180" height="27"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="jXk-4y-4KG" secondAttribute="bottom" id="C6I-5l-9VQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="1cX-M4-2bu" secondAttribute="trailing" id="RKu-87-3mq"/>
+                                            <constraint firstAttribute="trailing" secondItem="jXk-4y-4KG" secondAttribute="trailing" id="XqG-66-rPR"/>
+                                            <constraint firstItem="jXk-4y-4KG" firstAttribute="top" secondItem="fym-H7-XgJ" secondAttribute="top" id="ZL6-hk-Bzk"/>
+                                            <constraint firstItem="1cX-M4-2bu" firstAttribute="centerY" secondItem="fym-H7-XgJ" secondAttribute="centerY" id="an6-wq-zgk"/>
+                                            <constraint firstItem="jXk-4y-4KG" firstAttribute="leading" secondItem="fym-H7-XgJ" secondAttribute="leading" id="cIX-6l-0PD"/>
+                                            <constraint firstItem="1cX-M4-2bu" firstAttribute="leading" secondItem="fym-H7-XgJ" secondAttribute="leading" id="cPY-Z7-eCh"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="jXk-4y-4KG" id="Nmt-75-Z82"/>
+                                            <outlet property="titleLabel" destination="1cX-M4-2bu" id="XEV-fe-Wk6"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="YFE-yZ-pcG" id="9Wf-Z1-Cpg"/>
+                                    <outlet property="delegate" destination="YFE-yZ-pcG" id="DIL-k8-qgL"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hej-Hp-WjI" firstAttribute="top" secondItem="eSR-dd-H2m" secondAttribute="bottom" id="67p-SM-KgL"/>
+                            <constraint firstItem="eSR-dd-H2m" firstAttribute="leading" secondItem="zcc-6C-6nz" secondAttribute="leading" id="pLF-jQ-pJ2"/>
+                            <constraint firstAttribute="trailing" secondItem="eSR-dd-H2m" secondAttribute="trailing" id="sCZ-Iz-N1f"/>
+                            <constraint firstItem="eSR-dd-H2m" firstAttribute="top" secondItem="ny5-WD-Hvu" secondAttribute="bottom" id="ytp-JF-sgA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="eSR-dd-H2m" id="Zlg-Yv-iVg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K4A-Sn-qAj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
