--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -36,7 +36,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1yT-tD-cVV">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="548"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aDB-dE-2g5">
                                     <size key="itemSize" width="180" height="210"/>
@@ -181,13 +181,31 @@
                                     <outlet property="delegate" destination="YLA-8L-IIl" id="WC9-2M-AAV"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jSD-dm-U8L">
+                                <rect key="frame" x="0.0" y="548" width="600" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="3pO-0q-a5g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <inset key="titleEdgeInsets" minX="3" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="3" maxY="0.0"/>
+                                <state key="normal" title="我要参与" image="dynamic_bt_joinsquare">
+                                    <color key="titleColor" red="0.55294117647058827" green="0.55294117647058827" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="addAction:" destination="YLA-8L-IIl" eventType="touchUpInside" id="kq2-qH-rH2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="8ng-Sg-KbM" firstAttribute="top" secondItem="jSD-dm-U8L" secondAttribute="bottom" id="17Z-CN-v7C"/>
+                            <constraint firstAttribute="trailing" secondItem="jSD-dm-U8L" secondAttribute="trailing" id="9QK-TL-bJX"/>
                             <constraint firstAttribute="trailing" secondItem="1yT-tD-cVV" secondAttribute="trailing" id="Kv0-FN-kBb"/>
-                            <constraint firstItem="8ng-Sg-KbM" firstAttribute="top" secondItem="1yT-tD-cVV" secondAttribute="bottom" id="hUh-xU-wtJ"/>
                             <constraint firstItem="1yT-tD-cVV" firstAttribute="top" secondItem="40Q-u6-iRU" secondAttribute="top" id="lYC-s9-sKq"/>
                             <constraint firstItem="1yT-tD-cVV" firstAttribute="leading" secondItem="40Q-u6-iRU" secondAttribute="leading" id="tFW-bf-edY"/>
+                            <constraint firstItem="jSD-dm-U8L" firstAttribute="leading" secondItem="40Q-u6-iRU" secondAttribute="leading" id="zj5-Cv-xRp"/>
+                            <constraint firstItem="jSD-dm-U8L" firstAttribute="top" secondItem="1yT-tD-cVV" secondAttribute="bottom" id="znD-FL-y9C"/>
                         </constraints>
                     </view>
                     <connections>
@@ -804,6 +822,7 @@
     </scenes>
     <resources>
         <image name="bt_comment_n" width="19" height="18"/>
+        <image name="dynamic_bt_joinsquare" width="17" height="22"/>
         <image name="dynamic_bt_more_gray" width="18" height="4"/>
         <image name="dynamic_bt_release_green" width="23" height="18"/>
         <image name="dynamic_ic_fav" width="19" height="19"/>
