修复广场标签的bug

--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -243,7 +243,7 @@
                                     <outlet property="delegate" destination="Uyj-Ou-RRt" id="yqP-4Z-AD3"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhR-Cp-Uhl">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhR-Cp-Uhl">
                                 <rect key="frame" x="562" y="11" width="23" height="22"/>
                                 <state key="normal" image="dynamic_bt_release_green"/>
                                 <connections>
