--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -469,76 +469,78 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXCollectionCell" id="kev-Ze-DMY" customClass="ZXCollectionCell">
-                                        <rect key="frame" x="0.0" y="22" width="600" height="100"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXCollectionCell" rowHeight="124" id="kev-Ze-DMY" customClass="ZXCollectionCell">
+                                        <rect key="frame" x="0.0" y="22" width="600" height="124"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kev-Ze-DMY" id="G0v-XI-vev">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="123"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uWs-Rz-Yew">
-                                                    <rect key="frame" x="15" y="12" width="25" height="25"/>
+                                                    <rect key="frame" x="15" y="12" width="35" height="35"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="Nhk-Xc-RBO"/>
-                                                        <constraint firstAttribute="width" constant="25" id="vF1-5O-z9X"/>
+                                                        <constraint firstAttribute="height" constant="35" id="Nhk-Xc-RBO"/>
+                                                        <constraint firstAttribute="width" constant="35" id="vF1-5O-z9X"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4kA-Pv-Ngc">
-                                                    <rect key="frame" x="55" y="12" width="42" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="kyc-sq-NeT"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="65" y="15" width="42" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b3z-94-Iwv">
-                                                    <rect key="frame" x="485" y="12" width="100" height="75"/>
+                                                    <rect key="frame" x="65" y="43" width="65" height="65"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="100" id="Knp-vC-P2g"/>
-                                                        <constraint firstAttribute="height" constant="75" id="wXW-DH-wD3"/>
+                                                        <constraint firstAttribute="width" constant="65" id="OJ8-aJ-x4i"/>
+                                                        <constraint firstAttribute="height" constant="65" id="vcq-oW-ebd"/>
                                                     </constraints>
                                                     <connections>
-                                                        <outletCollection property="fd_collapsibleConstraints" destination="Knp-vC-P2g" id="78d-kl-2rb"/>
-                                                        <outletCollection property="fd_collapsibleConstraints" destination="Kxc-LM-ZPL" id="DLu-FW-BqD"/>
+                                                        <outletCollection property="fd_collapsibleConstraints" destination="OJ8-aJ-x4i" id="b3r-e8-9vk"/>
+                                                        <outletCollection property="fd_collapsibleConstraints" destination="RSX-fH-p0d" id="l7W-Mj-qqs"/>
                                                     </connections>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dsasdasdasdasdasdasdasdadasddsasdasdasdasdasdasdasdadasddsasdasdasdasdasdasdasdadasd" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVo-6O-BR1" customClass="MLEmojiLabel">
-                                                    <rect key="frame" x="55" y="33" width="422" height="37"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spc-KG-nra">
-                                                    <rect key="frame" x="55" y="70" width="33" height="21"/>
+                                                    <rect key="frame" x="552" y="15" width="33" height="16"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="ZO2-WC-FGA"/>
+                                                        <constraint firstAttribute="height" constant="16" id="dFt-dc-XAf"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.70196078431372544" green="0.69019607843137254" blue="0.6588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dsasdasdasdasdasdasdasdadasddsasdasdasdasdasdasdasdadasddsasdasdasdasdasdasdasdadasd" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVo-6O-BR1" customClass="MLEmojiLabel">
+                                                    <rect key="frame" x="140" y="43" width="445" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="65" id="bw7-cj-QAF"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstItem="4kA-Pv-Ngc" firstAttribute="leading" secondItem="spc-KG-nra" secondAttribute="leading" id="00B-GJ-tzJ"/>
-                                                <constraint firstItem="4kA-Pv-Ngc" firstAttribute="top" secondItem="uWs-Rz-Yew" secondAttribute="top" id="2Lw-Al-tld"/>
+                                                <constraint firstItem="4kA-Pv-Ngc" firstAttribute="top" secondItem="G0v-XI-vev" secondAttribute="top" constant="15" id="6dU-x7-uS3"/>
                                                 <constraint firstItem="uWs-Rz-Yew" firstAttribute="top" secondItem="G0v-XI-vev" secondAttribute="top" constant="12" id="8nJ-He-c6i"/>
                                                 <constraint firstItem="4kA-Pv-Ngc" firstAttribute="leading" secondItem="uWs-Rz-Yew" secondAttribute="trailing" constant="15" id="FrE-Cg-47g"/>
-                                                <constraint firstItem="uVo-6O-BR1" firstAttribute="top" secondItem="4kA-Pv-Ngc" secondAttribute="bottom" id="Hum-KA-6pF"/>
-                                                <constraint firstItem="b3z-94-Iwv" firstAttribute="leading" secondItem="uVo-6O-BR1" secondAttribute="trailing" constant="8" id="Kxc-LM-ZPL"/>
-                                                <constraint firstAttribute="bottom" secondItem="spc-KG-nra" secondAttribute="bottom" constant="8" id="Vs6-R0-6Qw"/>
+                                                <constraint firstItem="b3z-94-Iwv" firstAttribute="top" secondItem="4kA-Pv-Ngc" secondAttribute="bottom" constant="13" id="MWl-C4-F7m"/>
+                                                <constraint firstAttribute="trailing" secondItem="spc-KG-nra" secondAttribute="trailing" constant="15" id="Per-yw-FDl"/>
+                                                <constraint firstItem="uVo-6O-BR1" firstAttribute="leading" secondItem="b3z-94-Iwv" secondAttribute="trailing" constant="10" id="RSX-fH-p0d"/>
+                                                <constraint firstItem="b3z-94-Iwv" firstAttribute="leading" secondItem="4kA-Pv-Ngc" secondAttribute="leading" id="Vra-nt-jMa"/>
                                                 <constraint firstItem="uWs-Rz-Yew" firstAttribute="leading" secondItem="G0v-XI-vev" secondAttribute="leading" constant="15" id="dkQ-fy-zjX"/>
-                                                <constraint firstAttribute="trailing" secondItem="b3z-94-Iwv" secondAttribute="trailing" constant="15" id="giN-zA-T0w"/>
-                                                <constraint firstItem="uVo-6O-BR1" firstAttribute="leading" secondItem="4kA-Pv-Ngc" secondAttribute="leading" id="hvm-gM-7Y6"/>
-                                                <constraint firstItem="b3z-94-Iwv" firstAttribute="top" secondItem="G0v-XI-vev" secondAttribute="top" constant="12" id="wVW-Kv-Tax"/>
-                                                <constraint firstItem="spc-KG-nra" firstAttribute="top" secondItem="uVo-6O-BR1" secondAttribute="bottom" id="zkd-vO-fEe"/>
+                                                <constraint firstItem="spc-KG-nra" firstAttribute="top" secondItem="G0v-XI-vev" secondAttribute="top" constant="15" id="eIX-bG-qYx"/>
+                                                <constraint firstItem="uVo-6O-BR1" firstAttribute="top" secondItem="spc-KG-nra" secondAttribute="bottom" constant="12" id="fTC-TA-oVv"/>
+                                                <constraint firstAttribute="bottom" secondItem="uVo-6O-BR1" secondAttribute="bottom" constant="15" id="mZG-3a-tEO"/>
+                                                <constraint firstAttribute="trailing" secondItem="uVo-6O-BR1" secondAttribute="trailing" constant="15" id="pjB-Qe-pb1"/>
+                                                <constraint firstAttribute="bottom" secondItem="b3z-94-Iwv" secondAttribute="bottom" constant="15" id="rdK-XM-I0Y"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="contentImage" destination="b3z-94-Iwv" id="I6y-jF-ZmH"/>
                                             <outlet property="emojiLabel" destination="uVo-6O-BR1" id="udt-HP-xVP"/>
+                                            <outlet property="emojiLabelHeight" destination="bw7-cj-QAF" id="PLc-ef-BsG"/>
                                             <outlet property="headImg" destination="uWs-Rz-Yew" id="01z-w9-Q6x"/>
                                             <outlet property="nameLabel" destination="4kA-Pv-Ngc" id="2w4-T1-Lme"/>
                                             <outlet property="timeLabel" destination="spc-KG-nra" id="TJp-0G-blj"/>
