--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="NKz-9b-cRa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="NKz-9b-cRa">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -38,7 +37,7 @@
                         <viewControllerLayoutGuide type="bottom" id="NeK-ea-2PJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="unc-jg-Lqb">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="omb-uA-sVo" customClass="TPKeyboardAvoidingScrollView">
@@ -245,7 +244,7 @@
                         <viewControllerLayoutGuide type="bottom" id="bK5-Rd-2sQ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ifM-9e-N5r">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ieE-Xx-fxY">
@@ -256,9 +255,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="bK5-Rd-2sQ" firstAttribute="top" secondItem="ieE-Xx-fxY" secondAttribute="bottom" id="ALk-VG-3x8"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ieE-Xx-fxY" secondAttribute="trailing" constant="-16" id="EE3-cg-ROn"/>
                             <constraint firstItem="ieE-Xx-fxY" firstAttribute="top" secondItem="1HX-Zf-guC" secondAttribute="bottom" id="M2R-gz-6d0"/>
-                            <constraint firstItem="ieE-Xx-fxY" firstAttribute="leading" secondItem="ifM-9e-N5r" secondAttribute="leadingMargin" constant="-16" id="qrI-YY-tTd"/>
+                            <constraint firstItem="ieE-Xx-fxY" firstAttribute="leading" secondItem="ifM-9e-N5r" secondAttribute="leading" id="YCX-ju-5Ov"/>
+                            <constraint firstAttribute="trailing" secondItem="ieE-Xx-fxY" secondAttribute="trailing" id="cLH-QS-Xiw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -278,7 +277,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Itf-5W-fon"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="iBi-cD-pKH">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cur-Yh-fYy">
@@ -421,7 +420,7 @@
                         <viewControllerLayoutGuide type="bottom" id="FbA-K4-mIn"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="G0z-ph-5hG">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eph-gP-xqa">
